# ephemeral-spl-token

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
e-token/: Cargo.toml
e-token-api/: Cargo.toml
e-token-api/src/: error.rs  lib.rs
e-token-api/src/state/: ephemeral_ata.rs  global_vault.rs  mod.rs
e-token/src/: entrypoint.rs  error.rs  lib.rs
e-token/src/processor/: close_ephemeral_ata_permission.rs  create_ephemeral_ata_permission.rs  delegate_ephemeral_ata.rs  delegate_ephemeral_ata_permission.rs  deposit_spl_tokens.rs  initialize_ephemeral_ata.rs  initialize_global_vault.rs  mod.rs  reset_ephemeral_ata_permission.rs  undelegate_ephemeral_ata.rs  undelegate_ephemeral_ata_permission.rs  undelegation_callback.rs  update_ephemeral_ata_permission.rs  withdraw_spl_tokens.rs
e-token/src/processor/shared/: initialize_mint.rs  mod.rs
e-token/tests/: close_ephemeral_ata_permission.rs  create_ephemeral_ata_permission.rs  delegate_ephemeral_ata.rs  delegate_ephemeral_ata_permission.rs  deposit_spl_tokens.rs  initialize_ephemeral_ata.rs  initialize_global_vault.rs  initialize_mint.rs  reset_ephemeral_ata_permission.rs  undelegate_ephemeral_ata_permission_callback.rs  undelegation_callback.rs  undelegation_ephemeral_ata_callback.rs  update_ephemeral_ata_permission.rs  utils.rs  withdraw_spl_tokens.rs
e-token/tests/permission-program/: Cargo.toml
e-token/tests/permission-program/src/: lib.rs
e-token/tests/setup/: mod.rs
idl/: ephemeral_spl_token.json
