[workspace]
resolver = "2"
members = ["e-token", "e-token-api"]

[workspace.package]
authors = ["MagicBlock Labs <dev@magicblocklabs.xyz>"]
repository = "https://github.com/magicblock-labs/ephemeral-token"
license = "MIT"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-alloc", "custom-panic", "frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.cli]
solana = "2.3.4"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.dependencies]
ephemeral-rollups-pinocchio = { version = "0.8.2" }

pinocchio = { version = "0.10.1", features = ["cpi"] }
solana-address = { version = "2.0", features = ["curve25519"] }
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3"
pinocchio-system = "0.5"
pinocchio-token = "0.5"

solana-instruction = "3.0.0"
solana-pubkey = "4.0.0"
solana-program-pack = "3.0.0"
solana-program = "3.0.0"
solana-account = "3.2.0"
solana-program-test = "=3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-transaction = "3.0.1"
solana-system-interface = { version="2.0.0", features=["bincode"] }
spl-token = "9.0.0"
spl-token-interface = "2.0.0"
magicblock-delegation-program = "=1.1.2"