[package]
name = "ephemeral-spl-api"
version = "0.0.0"
description = "Shared crate with the Ephemeral SPL program ID"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}

[dependencies]
pinocchio-pubkey = { workspace = true }

[lints]
workspace = true
