[package]
name = "ephemeral-token-program"
version = "0.0.0"
description = "Ephemeral SPL Token program"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[features]
logging = []

[dependencies]
ephemeral-rollups-pinocchio = { workspace = true }
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
ephemeral-spl-api = { path = "../e-token-api" }

[dev-dependencies]
solana-program-pack = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
solana-system-interface = { workspace = true }
solana-account = { workspace = true }
spl-token-interface = { workspace = true }
magicblock-delegation-program = { workspace = true }

[lints]
workspace = true
